# career_curator

./: .gitignore  LICENSE  docker-compose.yml
.cursor/rules/: project-description.mdc
backend/: .dockerignore  DockerFile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7b6e0536b19e_add_on_delete_cascade_to_job_skills_job_.py
backend/app/: cache.py  db.py  init_db.py  main.py  models.py  redis.py  schemas.py
backend/app/auth/: manager.py  models.py  routes.py  schemas.py
backend/app/langchain/: generate_work_plan.py  parse_job.py
backend/app/langchain/agent/: __init__.py  career_agent.py  tools.py
backend/app/langchain/agent/tools/: job_summary_tool.py
backend/app/routes/: chat.py  job.py  plan.py  salary.py  skill.py  user_skill.py
backend/app/services/: embeddings.py  fetch_user_skills.py  generate_plan.py  generate_work_plan.py  import_job.py
backend/app/utility_scripts/: check_model_tables.py
frontend/: DockerFile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  axios-setup.js  main.js
frontend/src/api/: api.js
frontend/src/assets/: main.css  styles.css
frontend/src/components/: account-status-card.vue  confirm-delete-dialog.vue  loading-overlay.vue  navbar.vue  plan-generator-wrapper.vue  salary-summary.vue  skill-pie-chart.vue  user-info-card.vue  user-skills-card.vue
frontend/src/constants/: constants.js
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/views/: create-job.vue  home-page.vue  job-agent.vue  login.vue  (+2 more)
