[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "samlowth00",email = "samster.lowth@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "openai (>=1.97.1,<2.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.1"
alembic = "^1.16.4"

